--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,8 +59,74 @@
 
 <script>
 
-</script>
 
+
+let playSound = (e)=>{ // 4
+  // console.log(e); // 4 デモ用
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); // 5
+  const key = document.querySelector(`div[data-key="${e.keyCode}"]`); // 6
+  if(!audio) return; // 7
+
+  key.classList.add('playing'); // 8
+  audio.currentTime = 0; // 9
+  audio.play(); // 10
+}
+
+let removeTransition = (e)=>{ // 11
+  // console.log(e); // 11 デモ用
+  if(e.propertyName !== 'transform') return; // 12
+  e.target.classList.remove('playing'); // 13
+}
+
+window.addEventListener('keydown', playSound); // 1
+const keys = Array.from(document.querySelectorAll(`.key`)); // 2
+keys.forEach(key => key.addEventListener('transitionend', removeTransition)); // 3
+
+/**
+【Description】
+
+Global Scope
+1.  keydownイベントでplaySoundを発火させる
+2.  querySlectorAllメソッドでclass="key"を持つ要素を全て取得し
+    反復可能な配列オブジェクトにして、変数keysに代入
+3.  変数配列keysのそれぞれの要素に、transitionendイベント発火時
+    key変数オブジェクトとしてremoveTransition関数を実行させる
+
+注) addEventListenerの第2引数に設定する関数は、あくまで関数そのものであり
+　　関数の実行結果を表すplaySound()やremoveTransition()ではない
+　　参照: https://note.com/yamanoborer/n/n2e4cc40328b7
+
+注2)関数リテラルやFunctionコンストラクタ―は、呼び出し元のコード(playSound, removeTransition)よりも
+    先に記述する必要がある。なので、呼び出し先である関数よりも先に移動させると、
+    Uncaught ReferenceError: Cannot access 'function' before initialization
+    (初期化する以前に関数にアクセスすることはできない)と返される
+
+PlaySound
+機能： keyセレクタを適用する, 音を出す
+4.  引数eはここではkeydownイベントオブジェクトのこと
+    試しに関数内でconsole.log(e); でkeydownイベントをコンソールに出力すると分かりやすい
+5.  querySelectorメソッドで data-key属性を持つaudio要素を取得して 定数audioに代入する
+6.  同様に data-key属性を持つdiv要素を取得して 定数keyに代入する
+    5と6では、keydownイベントオブジェクトの中の、keyCodeプロパティにアクセスして取得する
+7.  keydownイベントでplaySoundを発火させても定数audioがfalseであれば終了する
+8.  key変数オブジェクトのDOMTokenListを受け取って、playingクラスを追加する
+9.  取得したaudioオブジェクトのcurrentTimeプロパティを、その都度0にリセットすることで連打を可能にする
+10. 取得したdata-key属性に該当するsrc属性を参照して audioオブジェクトの再生
+
+removeTransition
+機能： keyセレクタを外す 
+11. ここでのeは変数keyオブジェクトのcssプロパティ
+12. 変数keyの適用cssに「プロパティ名：transform」がなければ終了する
+13. targetプロパティで呼び出し元のHTMLオブジェクトを取得して、そのplayingクラスセレクタ―を削除する
+
+
+補足: data-*属性は、HTMLオブジェクトをDOMで扱うために使われる
+　　　今回は、data-keyとしているが、data-valでもdata-propでも自由に命名できる
+
+End
+
+*/
+</script>
 
 </body>
 </html>
