--- a/06 - Type Ahead/index-FINISHED.html
+++ b/06 - Type Ahead/index-FINISHED.html
@@ -15,12 +15,12 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json'; // 1
 
-const cities = [];
-fetch(endpoint)
+const cities = []; // 2
+fetch(endpoint) 
   .then(blob => blob.json())
-  .then(data => cities.push(...data));
+  .then(data => cities.push(...data)); // 3
 
 function findMatches(wordToMatch, cities) {
   return cities.filter(place => {
@@ -34,8 +34,8 @@ function numberWithCommas(x) {
   return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
 }
 
-function displayMatches() {
-  const matchArray = findMatches(this.value, cities);
+function displayMatches() { // 8
+  const matchArray = findMatches(this.value, cities); // 9
   const html = matchArray.map(place => {
     const regex = new RegExp(this.value, 'gi');
     const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
@@ -50,11 +50,49 @@ function displayMatches() {
   suggestions.innerHTML = html;
 }
 
-const searchInput = document.querySelector('.search');
-const suggestions = document.querySelector('.suggestions');
+const searchInput = document.querySelector('.search'); // 4
+const suggestions = document.querySelector('.suggestions'); // 5
 
-searchInput.addEventListener('change', displayMatches);
-searchInput.addEventListener('keyup', displayMatches);
+searchInput.addEventListener('change', displayMatches); // 6
+searchInput.addEventListener('keyup', displayMatches); // 7
+
+
+/**
+[Description]
+
+Grobal Scope
+1.  外部のjsonファイルを取得し、定数endPointに代入する
+2.  fetchメソッドで定数endPointのURLとHTTP通信を行い、jsonデータを取得する
+    
+3.  
+4.  querySelectorメソッドで、属性 class="search"を持つHTML要素を取得し、定数searchInputに代入する
+5.  querySelectorメソッドで、属性 class="suggestions"を持つHTML要素を取得し、定数suggestionsに代入する
+6.  serchInputがchengeイベントを発火したとき、displayMatches関数を呼び出す => displayMatches関数へ 
+7.  serchInputがkeyupイベントを発火したとき、displayMatches関数を呼び出す => displayMatches関数へ
+
+displayMatches
+8.  6, 7でイベントが発火したときに呼び出される
+9.  findMathces関数に引数(this.value, cities)を渡して、その返り値を定数matchArrayに代入する => findMatches関数へ
+10. 
+
+
+findMatches
+12. 
+13. 
+14. 
+15. 
+
+  分からないことリスト
+
+  fetchメソッド
+  thenメソッド
+
+  // displayMathesメソッド
+  findMatchesメソッド
+  
+
+
+*/
 
 </script>
   </body>
